--- a/preamble.sty
+++ b/preamble.sty
@@ -50,6 +50,16 @@
 \renewcommand{\Re}{\operatorname{Re}}
 \renewcommand{\Im}{\operatorname{Im}}
 
+\renewcommand{\O}{\mathcal{O}}
+% https://tex.stackexchange.com/questions/191059/how-to-get-a-small-letter-version-of-mathcalo
+\renewcommand{\o}{
+    \mathchoice
+    {{\scriptstyle\mathcal{O}}}% \displaystyle
+    {{\scriptstyle\mathcal{O}}}% \textstyle
+    {{\scriptscriptstyle\mathcal{O}}}% \scriptstyle
+    {\scalebox{.6}{$\scriptscriptstyle\mathcal{O}$}}%\scriptscriptstyle
+}
+
 \newenvironment{absolutelynopagebreak}
 {\par\nobreak\vfil\penalty0\vfilneg
     \vtop\bgroup}
@@ -57,9 +67,10 @@
     \prevdepth=\tpd}
 
 \pagestyle{fancy}
-\chead{Giacomo Ellero}
-\lhead{}
-\rhead{}
+% \fancyhf{}
+% \renewcommand{\headrulewidth}{0pt}
+\cfoot{Giacomo Ellero}
+\rfoot{\thepage}
 
 \newtcolorbox{examplebox}[1]{colback=green!5!white,colframe=green!40!black,title={#1},fonttitle=\bfseries,parbox=false}
 \newtcolorbox{notebox}[1]{colback=blue!5!white,colframe=blue!40!black,title={Note: #1},fonttitle=\bfseries,parbox=false}
