--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -77,34 +77,6 @@ $$
     \end{cases}
 $$
 
-\subsubsection{Summary}
-
-We can compile a table with all the variables we have defined so far:
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-        Variable     & 1D                 & 2D rotation                  \\
-        \hline
-        Position     & $x$                & $\theta$                     \\
-        Velocity     & $v = \dv{x}{t}$    & $\omega = \dv{\theta}{t}$    \\
-        Acceleration & $a = \dv[2]{x}{t}$ & $\alpha = \dv[2]{\theta}{t}$ \\
-        \hline
-    \end{tabular}
-    \caption{Summary of angular variables}
-    \label{tab:angular-variables}
-\end{table}
-
-and if $\alpha = \text{const}$ we have
-
-$$
-    \begin{cases}
-        \theta(t) & = \theta_0 + \omega_0 t + \frac{1}{2}\alpha t^2 \\
-        \omega(t) & = \omega_0 + \alpha t
-    \end{cases}
-$$
-
 \subsection{Rotational kinetic energy}
 
 First we will consider a simpler case of a discrete rigid body of $n$ masses connected by a stick around a pivot which also happens to be the center of mass.
@@ -124,6 +96,8 @@ note that the $i$ subscript is only present in the mass and the radius, but not 
 \end{align*}
 
 where $I \coloneq \sum_{i=1}^n m_i r_i^2$ is the \textbf{moment of inertia} of the rigid body.
+
+\subsubsection{Moment of inertia}
 
 We can make some trivial observations about the moment of inertia:
 
@@ -155,7 +129,7 @@ Note that $r$ and $\sigma$ are functions of the position, even if we dropped the
     For a matter of notation, we will use the symbol $\lambda$ to denote the linear density mass function, $\sigma$ to denote the surface density mass function and $\rho$ to denote the volume density mass function.
 \end{remark}
 
-\begin{example}[Moment of inertia of a ring]
+\begin{example}[moment of inertia of a ring]
     Consider a ring of radius $R$ and mass $M$ with uniform density. We want to calculate the moment of inertia with respect to the center of the ring.
 
     Since the density is uniform, we can write $\lambda = \frac{M}{2\pi R}$, then
@@ -168,7 +142,7 @@ Note that $r$ and $\sigma$ are functions of the position, even if we dropped the
     \end{align*}
 \end{example}
 
-\begin{example}[Moment of inertia of a disk]
+\begin{example}[moment of inertia of a disk]
     Consider a disk of radius $R$ and mass $M$ with uniform density. We want to calculate the moment of inertia with respect to the center of the disk.
 
     Since the density is uniform, we can write $\sigma = \frac{M}{\pi R^2}$.
@@ -195,5 +169,182 @@ Note that $r$ and $\sigma$ are functions of the position, even if we dropped the
 
     which indeed is the same result as before at the expense of a much simpler integral.
 \end{example}
+
+% Class of 25/03/2024
+
+\begin{example}(moment of inertia of a rod)
+    Consider a rod of length $L$ and mass $M$ with density mass function $\lambda = \frac{M}{L} = \text{const}$.
+
+    If we calculate the moment of inertia at the point $x = 0$ we get
+
+    $$
+        I_0 = \int_0^L x^2 \dd{m} = \int_0^L x^2 \lambda \dd{x} = \left[ \lambda frac{x^3}{3} \right]_0^L = \frac{1}{3} ML^2
+    $$
+
+    Note that the moment of inertia depends on the point we calculate it on, for instance, if we calculate it at the center of mass we get
+
+    $$
+        I_{\text{cm}} = \int_{-L/2}^{L/2} x^2 \lambda \dd{m} = \left[ \lambda \frac{x^3}{3} \right]_{-L/2}^{L/2} = \frac{1}{12} ML^2
+    $$
+
+    that is, $I_0 > I_{\text{cm}}$, in particular, $I_0 = I_{\text{cm}} + M \left(\frac{L}{2}\right)^2$.
+    We note that $L/2$ is the distance between the two points, so can think about generalizing this result to any two points, which is what we are going to do in the next section.
+\end{example}
+
+\subsection{Parallel axis theorem}
+
+Before staring with the theorem, we need this remark:
+\begin{remark}
+    Let $\vec{A}, \vec{B}$, then
+    $$
+        \left( \vec{A} + \vec{B} \right) \cdot \left( \vec{A} + \vec{B} \right) = \abs{\vec{A} + \vec{B}}^2 = A^2 + 2 \vec{A} \cdot \vec{B} + B^2
+    $$
+\end{remark}
+
+\begin{theorem}[parallel axis theorem]
+    Consider a rigid body with moment of inertia $I_{\text{cm}}$ with respect to the center of mass and mass $M$. Then the moment of inertia $I$ with respect to any other point $O$ at a distance $d$ from the center of mass is
+
+    $$
+        I_O = I_{\text{cm}} + M d^2
+    $$
+\end{theorem}
+
+\begin{proof}
+    We have that $I_O = \sum^N m_i r_i^2$, then let $\vec{d}$ be the distance between the center of mass and $O$, $\vec{r'}_i$ be the distance between the center of mass and $i$ and $\vec{r}_i$ be the distance between $O$ and $i$.
+
+    Then $\vec{r}_i = \vec{r'}_i + \vec{d}$, so we can write
+
+    $$
+        (\vec{r}_i)^2 = \abs{\vec{r'}_i + \vec{d}}^2 = (\vec{r'}_i)^2 + 2 \vec{r'}_i \cdot \vec{d} + (\vec{d})^2 = (r_i')^2 + d^2 + 2 \vec{r'}_i \cdot \vec{d}
+    $$
+
+    We want to write the moment of inertia as
+
+    \begin{align*}
+        I_O & = \sum^N_{i = 1} m_i r_i^2 = \sum^N_{i = 1} m_i (r_i')^2 + \sum^N_{i = 1} m_i d^2 + 2 \sum^N_{i = 1} m_i \vec{r'}_i \cdot \vec{d} \\
+            & = \sum^N_{i = 1} m_i (r_i')^2 + M d^2 + 2 \vec{d} \cdot \sum^N_{i = 1} m_i \vec{r'}_i
+    \end{align*}
+
+    and in order to prove the theorem we need to show that the last term is zero.
+    Indeed we have that
+    $$
+        \sum^N_{i = 1} m_i \vec{r'}_i = M \vec{r}_{\text{cm}} = 0
+    $$
+    because the center of mass is the origin of the reference frame of the $r_i'$.
+\end{proof}
+
+This is very useful to compute the kinetic energy of a rigid body that is rotating around a point that is not the center of mass.
+We have that
+
+\begin{align*}
+    K & = \frac{1}{2} I_O \omega^2                                           \\
+      & = \frac{1}{2} (I_{\text{cm}} + M d^2) \omega^2                       \\
+      & = \frac{1}{2} I_{\text{cm}} \omega^2 + \frac{1}{2} M (d \omega)^2    \\
+      & = \frac{1}{2} I_{\text{cm}} \omega^2 + \frac{1}{2} M v_{\text{cm}}^2
+\end{align*}
+
+\subsection{Torque}
+
+Torque is the equivalent of force in rotational dynamics. It is defined as
+
+\begin{align*}
+    \vec{\tau} & \coloneq \vec{r} \times \vec{F} \\
+               & = r F \sin(\theta)              \\
+               & = r F_t
+\end{align*}
+
+where $F_t$ is the tangential component of the force.
+Note that $\tau > 0$ if the rotation it causes is counterclockwise.
+
+\subsubsection{Newton's law for rotation}
+
+As we said before, torque is the equivalent of force in rotational dynamics. Then
+
+\begin{theorem}
+    $$
+        \tau = I \alpha
+    $$
+\end{theorem}
+
+\begin{proof}
+    We have that $F_t = F \sin \theta = m a_t$, but $a_t$ can be written in terms of the angular acceleration, so we can write $F_t = m r \alpha$.
+
+    Now if we multiply both sides by $r$
+
+    \begin{align*}
+        r F_t & = m r^2 \alpha \\
+        \tau  & = I \alpha
+    \end{align*}
+\end{proof}
+
+This works even if there are multiple forces actin on multiple points:
+\begin{itemize}
+    \item If there are multiple forces acting on a singular point we can just sum the forces to obtain the total torque.
+    \item If we have multiple forces acting on multiple points we can sum the torques of each force acting on each point and then sum all the torques.
+\end{itemize}
+
+Even though these could look like two different cases, they are actually the same thing:
+
+$$
+    \tau = \sum_i \tau_i = \sum_i m_i r_i^2 \alpha = \alpha \sum_i m_i r_i^2 = I \alpha
+$$
+
+that is because $\alpha$ is the same for all the points in the rigid body.
+
+Moreover, if we define the \emph{angular momentum} as
+$$
+    L \coloneq I \omega
+$$
+
+we can write Newton's law for rotation as
+
+$$
+    \tau = I \alpha = I \dv{\omega}{t} = \dv{L}{t}
+$$
+
+\subsubsection{Torque due to gravity}
+
+If we have a rigid body with mass $M$ and center of mass at the origin, we can calculate the torque due to gravity as the integral of the torque due to the force of gravity acting on each point of the rigid body.
+
+$$
+    \dd{\tau} = \dd{F} r \sin \theta = \dd{m} g r \sin \theta = \dd{m} g r_x
+$$
+
+Then
+
+$$
+    \tau = \int_{RB} \dd{\tau} = \int_{RB} \dd{m} g r_x = g \int_{RB} \dd{m} r_x = M g x_{\text{cm}}
+$$
+
+\subsection{Summary table}
+
+We can keep track of the variables we have defined in a table.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|}
+        \hline
+        \textbf{Variable} & \textbf{1D}        & \textbf{2D rotation}         \\
+        \hline
+        Position          & $x$                & $\theta$                     \\
+        Velocity          & $v = \dv{x}{t}$    & $\omega = \dv{\theta}{t}$    \\
+        Acceleration      & $a = \dv[2]{x}{t}$ & $\alpha = \dv[2]{\theta}{t}$ \\
+        Inertia           & $m$                & $I$                          \\
+        Force/Torque      & $F = ma$           & $\tau = I \alpha$            \\
+        Momentum          & $p = mv$           & $L = I \omega$               \\
+        \hline
+    \end{tabular}
+    \caption{Summary of angular variables}
+    \label{tab:angular-variables}
+\end{table}
+
+and if $\alpha = \text{const}$ we have
+
+$$
+    \begin{cases}
+        \theta(t) & = \theta_0 + \omega_0 t + \frac{1}{2}\alpha t^2 \\
+        \omega(t) & = \omega_0 + \alpha t
+    \end{cases}
+$$
 
 \end{document}
