--- a/preamble.sty
+++ b/preamble.sty
@@ -31,6 +31,9 @@
 \RequirePackage{fancyhdr} % for headers
 \RequirePackage{hyperref} % for hyperlinks
 
+% Use sans-serif font
+\renewcommand{\familydefault}{\sfdefault}
+
 \hypersetup{
     colorlinks=true,
     linkcolor=cyan,
